--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "md5": "^2.3.0",
     "ngrok": "^5.0.0-beta.2",
     "nodemon": "^3.0.2",
-    "openurl": "^1.1.1"
+    "openurl": "^1.1.1",
+    "engines": {"node": ">=18.18.0 <19.0.0"}
   }
+  
 }
