--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "ngrok": "^5.0.0-beta.2",
     "nodemon": "^3.0.2",
     "openurl": "^1.1.1",
-    "node": ">=18.18.0 <19.0.0"
+    "node": ">=18.18.0"
   }
   
 }
